src/test/deca/context/invalid/our_tests/jb-doubleDef-field.deca
// Description:
//    DoubleDef of field
//
// Resultats:
//    Should throw a contextual error (rule 3.17)
//
// Historique:
//    cree le 22/01/2017

class A {
    int x, x;
}
